--- a/popout.html
+++ b/popout.html
@@ -5,10 +5,30 @@
     <title>Popout Menu</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="popout.css">
-    
+    <script type="text/javascript" lang="javascript">
+    var i=0;
+    function pop(){
+        if(i==0){
+            document.getElementById("item1").style.transform = 'translateX(-150px)';
+            document.getElementById("item2").style.transform = 'translate(-100px,-100px)';
+            document.getElementById("item3").style.transform = 'translateY(-150px)';
+            document.getElementById("item4").style.transform = 'translate(100px,-100px)';
+            document.getElementById("item5").style.transform = 'translateX(150px)';
+            i=1;
+        }
+        else{
+            document.getElementById("item1").style.transform = 'translate(0)';
+            document.getElementById("item2").style.transform = 'translate(0)';
+            document.getElementById("item3").style.transform = 'translate(0)';
+            document.getElementById("item4").style.transform = 'translate(0)';
+            document.getElementById("item5").style.transform = 'translate(0)';
+            i=0;
+        }
+    }
+    </script>
 </head>
 <body>
-   <div class="menu" onclick="pop()">
+   <div class="menu" onClick="pop()">
        <i class="fa fa-share-alt"></i>
    </div>
     <div class="menu-items">
@@ -48,26 +68,5 @@
             </center>
         </div>
     </div>
-    <script type="text/javscript" lang="javascript">
-    var i=0;
-    function pop(){
-        if(i==0){
-            document.getElementById("item1").style.transform = 'translateX(-150px)';
-            document.getElementById("item2").style.transform = 'translate(-100px,-100px)';
-            document.getElementById("item3").style.transform = 'translateY(-150px)';
-            document.getElementById("item4").style.transform = 'translate(100px,-100px)';
-            document.getElementById("item5").style.transform = 'translateX(150px)';
-            i=1;
-        }
-        else{
-            document.getElementById("item1").style.transform = 'translate(0)';
-            document.getElementById("item2").style.transform = 'translate(0)';
-            document.getElementById("item3").style.transform = 'translate(0)';
-            document.getElementById("item4").style.transform = 'translate(0)';
-            document.getElementById("item5").style.transform = 'translate(0)';
-            i=0;
-        }
-    }
-    </script>
 </body>
 </html>
